[tool.black]
line-length = 79
[tool.poetry]
name        = "neofuzz"
version     = "0.3.4"
description = "Blazing fast fuzzy text search for Python."
authors     = ["Márton Kardos <power.up1163@gmail.com>"]
license     = "MIT"
readme      = "README.md"
packages    = [{ include = "neofuzz" }]

[tool.poetry.dependencies]
python       = ">=3.8"
scikit-learn = ">=1.1.0"
pynndescent  = "~0.5.13"
numpy        = ">=2.2.3"
tokenizers   = ">=0.21.0"
joblib       = ">=1.4.0"
thefuzz      = ">=0.22.0"


[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
